--- a/Test_ws_async/app/src/main/AndroidManifest.xml
+++ b/Test_ws_async/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <uses-permission android:name="android.permission.INTERNET"/>
+        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     </application>
 
 </manifest>
